--- a/snapstyle.html
+++ b/snapstyle.html
@@ -37,7 +37,7 @@
         </section>
 
         <section id="intro">
-            <div class="container-fluid accenture-intro">
+            <div class="container-fluid snapstyle-intro">
                 <div class="row">
                     <div class="col-12 wow fadeIn">
                         <h1>SnapStyle</h1>
@@ -48,7 +48,7 @@
         </section>
 
         <section id="summary">
-            <div class="container-fluid accenture-summary">
+            <div class="container-fluid snapstyle-summary">
                 <div class="row">
                     <div class="col-12 mx-auto wow fadeIn">
                         <img class="img-fluid" src="img/accenture-hero.png">
@@ -140,12 +140,6 @@
 
             <div class="row">
                 <div class="col-12 col-md-10 col-lg-8 mx-auto text-block">
-                    <h2>Design</h2>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-12 col-md-10 col-lg-8 mx-auto text-block">
                     <h3>Competitive Analysis</h3>
                     <p>I conducted a competitive analysis of apps currently in the market that serve similar purposes, and laid my notes out in a table summarising what I thought were their strengths and weaknesses:</p>
                 </div>
@@ -166,65 +160,119 @@
 
             <div class="row image-block">
                 <div class="col-12 col-md-10 mx-auto wow fadeIn">
-                    <img class="img-fluid" src="img/snapstyle-main-user-flow.png">
+                    <p><img class="img-fluid" src="img/snapstyle-main-user-flow.png"></p>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-12 col-md-10 col-lg-8 mx-auto text-block">
+                    <h2>Design</h2>
+                </div>
+            </div>
+
+            <div class="row video-block">
+                <div class="col-12 col-md-4 col-lg-3">
+                    <video width="240" autoplay="" loop="">
+                        <source src="img/video/snapstyle-home.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 text-block">
                     <h3>Home</h3>
                     <p>Home is the starting point for users to capture their moment of discovery. Currently, a good way to get information quickly is to hover the phone camera over the item for AI to process and generate results. I wanted to communicate SnapStyle as a go-to app for on-the-fly fashion and style discovery, yet help users access the camera quickly.</p>
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-12 col-md-10 col-lg-8 mx-auto text-block">
+            <div class="row video-block greybg">
+                <div class="col-12 col-md-6 col-lg-4 text-block">
                     <h3>Camera</h3>
                     <p>The camera view is stripped down to focus on taking a photo or scanning something. Also, I wanted to make the process of capturing and processing something as efficient as possible. The bottom right icon toggles between Camera and Scan mode; in Scan mode, the item is scanned automatically, while in Camera mode, taking a photo triggers the app to scan and process it. Once done, the generated results appear.</p>
                 </div>
+                <div class="col-12 col-md-4 col-lg-3">
+                    <video width="240" autoplay="" loop="">
+                        <source src="img/video/snapstyle-camera.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
             </div>
 
-            <div class="row">
-                <div class="col-12 col-md-10 col-lg-8 mx-auto text-block">
+            <div class="row video-block">
+                <div class="col-12 col-md-4 col-lg-3">
+                    <video width="240" autoplay="" loop="">
+                        <source src="img/video/snapstyle-results.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 text-block">
                     <h3>Results</h3>
                     <p>The results screen helps users control what they’re looking for. As multiple items may have been detected, it’d be helpful to allow them to refine and adjust their query to get better results, and scrolling through the results pins the query on the header so that they can quickly snap back to the top. They may also choose to manually apply filters. Overall, these actions should be optional, as the app preferably delivers immediate and accurate results.</p>
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-12 col-md-10 col-lg-8 mx-auto text-block">
+            <div class="row video-block greybg">
+                <div class="col-12 col-md-6 col-lg-4 text-block">
                     <h3>Product Details</h3>
                     <p>Users see more about their chosen item and customize their order on the product details page. The Save feature is highlighted to encourage them to save items for later and use the app regularly for fashion inspiration. Once everything is ready, they can add the item to their bag with a tap, or continue browsing other relevant products.</p>
                 </div>
+                <div class="col-12 col-md-4 col-lg-3">
+                    <video width="240" autoplay="" loop="">
+                        <source src="img/video/snapstyle-product-details.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
             </div>
 
-            <div class="row">
-                <div class="col-12 col-md-10 col-lg-8 mx-auto text-block">
+            <div class="row video-block">
+                <div class="col-12 col-md-4 col-lg-3">
+                    <video width="240" autoplay="" loop="">
+                        <source src="img/video/snapstyle-create-post.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 text-block">
                     <h3>Create Post</h3>
                     <p>Users can create a post from the results page as well. Tapping on the top right button opens up a window for them to make a post with their photo to share as inspiration, or seek suggestions about where and how to get something. Sharing posts helps users leverage on crowdsourced knowledge in case they don’t end up getting the results they’re looking for, and also encourages them to participate in a community of fashion and style enthusiasts.</p>
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-12 col-md-10 col-lg-8 mx-auto text-block">
+            <div class="row video-block greybg">
+                <div class="col-12 col-md-6 col-lg-4 text-block">
                     <h3>Bag &amp; Checkout</h3>
                     <p>In their bag, users get an overview of the items they’ve added classified by store, as well as the total cost. They may also customise their order details, remove orders and make final changes before checkout.</p>
                     <p>At checkout, information such as order details, shipping details and payment methods are clearly laid out and offer many points for users to edit and confirm them. Once reviewed, they can continue with their chosen payment method.</p>
                     <p>After purchase completion, users are taken back to the app and to  a page that provides them with their order and tracking information.</p>
                 </div>
+                <div class="col-12 col-md-4 col-lg-3">
+                    <video width="240" autoplay="" loop="">
+                        <source src="img/video/snapstyle-bag-checkout.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
             </div>
 
-            <div class="row">
-                <div class="col-12 col-md-10 col-lg-8 mx-auto text-block">
+            <div class="row video-block">
+                <div class="col-12 col-md-4 col-lg-3">
+                    <video width="240" autoplay="" loop="">
+                        <source src="img/video/snapstyle-profile-post-details.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 text-block">
                     <h3>Profile &amp; Post Details</h3>
                     <p>The profile is the place for users to control everything that’s directly related to them and their activity, from their basic information to their important private details such as shipping address and payment methods. It’s also a spot for them to view and edit their posts, and browse their saved posts or products.</p>
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-12 col-md-10 col-lg-8 mx-auto text-block">
+            <div class="row video-block greybg">
+                <div class="col-12 col-md-6 col-lg-4 text-block">
                     <h3>Discover</h3>
                     <p>Discover is where users get to see what everyone else is posting, from fashion and style inspiration to requests for suggestions on where to get a particularly attractive or fashionable garment or accessory. Like several other social media feeds, I focused on using images to capture attention. Also, I thought it’d be handy to provide easy access to filters as users scroll and find that they would like to refine or narrow down what they are seeing.</p>
+                </div>
+                <div class="col-12 col-md-4 col-lg-3">
+                    <video width="240" autoplay="" loop="">
+                        <source src="img/video/snapstyle-discover.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
                 </div>
             </div>
         </div>
