--- a/index.html
+++ b/index.html
@@ -53,6 +53,18 @@
         <div class="container-fluid work">
             <div class="row works">
                 <div class="col-12 col-md-6 mx-auto item">
+                    <a href="snapstyle.html">
+                        <div class="preview">
+                            <img src="img/snapstyle-hero.png" class="img-fluid">
+                            <div class="labels">
+                                <div class="label">UX Design</div>
+                                <div class="label">UI Design</div>
+                            </div>
+                            <div class="caption">SnapStyle</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-12 col-md-6 mx-auto item">
                     <a href="accenture.html">
                         <div class="preview">
                             <img src="img/accenture-hero.jpg" class="img-fluid">
@@ -64,6 +76,9 @@
                         </div>
                     </a>
                 </div>
+            </div>
+
+            <div class="row works">
                 <div class="col-12 col-md-6 mx-auto item">
                     <a href="investingnote.html">
                         <div class="preview">
@@ -77,9 +92,6 @@
                         </div>
                     </a>
                 </div>
-            </div>
-
-            <div class="row works">
                 <div class="col-12 col-md-6 mx-auto item">
                     <a href="oneservice.html">
                         <div class="preview">
@@ -92,6 +104,9 @@
                         </div>
                     </a>
                 </div>
+            </div>
+
+            <div class="row works">
                 <div class="col-12 col-md-6 mx-auto item">
                     <a href="srina.html">
                         <div class="preview">
@@ -104,9 +119,6 @@
                         </div>
                     </a>
                 </div>
-            </div>
-
-            <div class="row works">
                 <div class="col-12 col-md-6 item">
                     <a href="projectshowcase.html">
                         <div class="preview">
