--- a/snapstyle.html
+++ b/snapstyle.html
@@ -41,7 +41,7 @@
                 <div class="row">
                     <div class="col-12 wow fadeIn">
                         <h1>SnapStyle</h1>
-                        <h2>Description</h2>
+                        <h2>Search, buy and explore fashion with a snap</h2>
                     </div>
                 </div>
             </div>
@@ -51,7 +51,7 @@
             <div class="container-fluid snapstyle-summary">
                 <div class="row">
                     <div class="col-12 mx-auto wow fadeIn">
-                        <img class="img-fluid" src="img/accenture-hero.png">
+                        <img class="img-fluid" src="img/snapstyle-hero.png">
                     </div>
                 </div>
 
@@ -75,7 +75,7 @@
                  	</div>
              	</div>
 
-             <div class="row greybg wow fadeInUp">
+             <div class="row greybg wow fadeInUp project-info">
                 <div class="col-12 col-sm-4 text-center">
                     <h3>Period &amp; Timeframe</h3>
                     November 2017<br>5 days
@@ -172,7 +172,7 @@
 
             <div class="row video-block">
                 <div class="col-12 col-md-4 col-lg-3">
-                    <video width="240" autoplay="" loop="">
+                    <video width="240" autoplay loop controls>
                         <source src="img/video/snapstyle-home.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
@@ -189,7 +189,7 @@
                     <p>The camera view is stripped down to focus on taking a photo or scanning something. Also, I wanted to make the process of capturing and processing something as efficient as possible. The bottom right icon toggles between Camera and Scan mode; in Scan mode, the item is scanned automatically, while in Camera mode, taking a photo triggers the app to scan and process it. Once done, the generated results appear.</p>
                 </div>
                 <div class="col-12 col-md-4 col-lg-3">
-                    <video width="240" autoplay="" loop="">
+                    <video width="240" autoplay loop controls>
                         <source src="img/video/snapstyle-camera.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
@@ -198,7 +198,7 @@
 
             <div class="row video-block">
                 <div class="col-12 col-md-4 col-lg-3">
-                    <video width="240" autoplay="" loop="">
+                    <video width="240" autoplay loop controls>
                         <source src="img/video/snapstyle-results.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
@@ -215,7 +215,7 @@
                     <p>Users see more about their chosen item and customize their order on the product details page. The Save feature is highlighted to encourage them to save items for later and use the app regularly for fashion inspiration. Once everything is ready, they can add the item to their bag with a tap, or continue browsing other relevant products.</p>
                 </div>
                 <div class="col-12 col-md-4 col-lg-3">
-                    <video width="240" autoplay="" loop="">
+                    <video width="240" autoplay loop controls>
                         <source src="img/video/snapstyle-product-details.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
@@ -224,7 +224,7 @@
 
             <div class="row video-block">
                 <div class="col-12 col-md-4 col-lg-3">
-                    <video width="240" autoplay="" loop="">
+                    <video width="240" autoplay loop controls>
                         <source src="img/video/snapstyle-create-post.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
@@ -243,7 +243,7 @@
                     <p>After purchase completion, users are taken back to the app and to  a page that provides them with their order and tracking information.</p>
                 </div>
                 <div class="col-12 col-md-4 col-lg-3">
-                    <video width="240" autoplay="" loop="">
+                    <video width="240" autoplay loop controls>
                         <source src="img/video/snapstyle-bag-checkout.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
@@ -252,7 +252,7 @@
 
             <div class="row video-block">
                 <div class="col-12 col-md-4 col-lg-3">
-                    <video width="240" autoplay="" loop="">
+                    <video width="240" autoplay loop controls>
                         <source src="img/video/snapstyle-profile-post-details.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
@@ -269,7 +269,7 @@
                     <p>Discover is where users get to see what everyone else is posting, from fashion and style inspiration to requests for suggestions on where to get a particularly attractive or fashionable garment or accessory. Like several other social media feeds, I focused on using images to capture attention. Also, I thought it’d be handy to provide easy access to filters as users scroll and find that they would like to refine or narrow down what they are seeing.</p>
                 </div>
                 <div class="col-12 col-md-4 col-lg-3">
-                    <video width="240" autoplay="" loop="">
+                    <video width="240" autoplay loop controls>
                         <source src="img/video/snapstyle-discover.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
@@ -283,7 +283,7 @@
             <div class="row">
                 <div class="col-12 col-md-10 col-lg-8 mx-auto text-block">
                     <a class="prev-link" href="index.html">&larr; Home</a>
-                    <a class="next-link" href="investingnote.html">Next Project &rarr;</a>
+                    <a class="next-link" href="accenture.html">Next Project &rarr;</a>
                 </div>
             </div>
         </div>
