--- a/accenture.html
+++ b/accenture.html
@@ -208,8 +208,9 @@
 
             <div class="row">
                 <div class="col-12 col-md-10 col-lg-8 mx-auto text-block">
-                    <h2>Outcome</h2>
-                    <p>We are very happy to have emerged as second runner-up in the challenge, and received positive feedback from participants and the organising committee. Click <a href="https://invis.io/5CC9CQAVU" target="_blank">here</a> to try our interactive prototype!</p>
+                    <h2>Prototype</h2>
+                    <p>We are very happy to have emerged as second runner-up in the challenge, and received positive feedback from participants and the organising committee. Click on the link below to try our interactive prototype!</p>
+                    <p class="text-center"><a class="prototype-link" href="https://invis.io/5CC9CQAVU" target="_blank">View Prototype</a></p>
                 </div>
             </div>
         </div>
@@ -219,7 +220,7 @@
         <div class="container-fluid bottom-nav">
             <div class="row">
                 <div class="col-12 col-md-10 col-lg-8 mx-auto text-block">
-                    <a class="prev-link" href="index.html">&larr; Home</a>
+                    <a class="prev-link" href="snapstyle.html">&larr; Previous Project</a>
                     <a class="next-link" href="investingnote.html">Next Project &rarr;</a>
                 </div>
             </div>
