--- a/snapstyle.html
+++ b/snapstyle.html
@@ -275,6 +275,14 @@
                     </video>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-12 col-md-10 col-lg-8 mx-auto text-center text-block">
+                    <h2>Prototype</h2>
+                    <p>Thanks for reading! Click on the link below to view the interactive prototype.</p>
+                    <p><a class="prototype-link" href="https://marvelapp.com/2f05i0e" target="_blank">View Prototype</a></p>
+                </div>
+            </div>
         </div>
     </section>
 
