--- a/projectshowcase.html
+++ b/projectshowcase.html
@@ -63,7 +63,7 @@
                   <div class="col-12 col-sm-10 col-md-5 mx-auto align-self-center text-block">
                     <p><h2>Equity Consulting Group</h2>
                     Website for Equity Consulting Group designed and implemented using Bootstrap 4, Sass and Gulp.js, and Photoshop for editing photos.</p>
-                    <p><a href="http://equityconsultinggroup.net" target="_blank">View Project &rarr;</a></p>
+                    <p class="text-center"><a class="prototype-link" href="http://equityconsultinggroup.net" target="_blank">View Project</a></p>
                 </div>
             </div>
 
@@ -93,7 +93,7 @@
                   <li>Ensure consistency in browsing experience across devices</li>
               </ol>
           This project was also my first foray into developing a responsive WordPress theme using Underscores.</p>
-          <p><a href="http://theridge.sg" target="_blank">View Project &rarr;</a></p>
+          <p class="text-center"><a class="prototype-link" href="http://theridge.sg" target="_blank">View Project</a></p>
       </div>
   </div>
 </div>
