--- a/investingnote.html
+++ b/investingnote.html
@@ -216,7 +216,7 @@
 
             <div class="row image-block wow fadeIn">
                 <div class="col-12 col-lg-8 mx-auto">
-                    <img class="img-fluid" src="img/investingnote-mobile-stocks.jpg">
+                    <img class="img-fluid" src="img/investingnote-mobile-stocks.png">
                 </div>
             </div>
 
@@ -234,7 +234,7 @@
 
             <div class="row image-block wow fadeIn">
                 <div class="col-12 col-lg-8 mx-auto">
-                    <img class="img-fluid" src="img/investingnote-mobile-profile.jpg">
+                    <img class="img-fluid" src="img/investingnote-mobile-profile.png">
                 </div>
             </div>
 
@@ -253,7 +253,7 @@
 
             <div class="row image-block wow fadeIn">
                 <div class="col-12 col-sm-6 mx-auto">
-                    <img class="img-fluid" src="img/investingnote-mobile-portfolio-and-stock.jpg">
+                    <img class="img-fluid" src="img/investingnote-mobile-portfolio-and-stock.png">
                 </div>
             </div>
 
