--- a/accenture.html
+++ b/accenture.html
@@ -142,7 +142,7 @@
 
             <div class="row image-block wow fadeIn">
                 <div class="col-12 col-md-8 mx-auto">
-                    <img class="img-fluid" src="img/accenture-my-expenses.jpg">
+                    <img class="img-fluid" src="img/accenture-my-expenses.png">
                 </div>
             </div>
 
@@ -160,7 +160,7 @@
 
             <div class="row image-block wow fadeIn">
                 <div class="col-12 col-md-8 mx-auto">
-                    <img class="img-fluid" src="img/accenture-my-goals.jpg">
+                    <img class="img-fluid" src="img/accenture-my-goals.png">
                 </div>
             </div>
 
@@ -178,7 +178,7 @@
 
             <div class="row image-block wow fadeIn">
                 <div class="col-12 col-md-8 mx-auto">
-                    <img class="img-fluid" src="img/accenture-my-devices.jpg">
+                    <img class="img-fluid" src="img/accenture-my-devices.png">
                 </div>
             </div>
 
@@ -196,7 +196,7 @@
 
             <div class="row image-block wow fadeIn">
                 <div class="col-12 col-md-6 mx-auto">
-                    <img class="img-fluid" src="img/accenture-community.jpg">
+                    <img class="img-fluid" src="img/accenture-community.png">
                 </div>
             </div>
 
