--- a/accenture.html
+++ b/accenture.html
@@ -50,7 +50,7 @@
         <section id="summary">
             <div class="container-fluid accenture-summary">
                 <div class="row">
-                    <div class="col-12 wow fadeIn">
+                    <div class="col-12 text-center mx-auto wow fadeIn">
                         <img class="img-fluid" src="img/accenture-hero.jpg">
                     </div>
                 </div>
