--- a/oneservice.html
+++ b/oneservice.html
@@ -51,7 +51,7 @@
         <section id="summary">
             <div class="container-fluid oneservice-summary">
                 <div class="row">
-                    <div class="col-12 wow fadeIn">
+                    <div class="col-12 text-center mx-auto wow fadeIn">
                         <img class="img-fluid" src="img/oneservice-hero.jpg">
                     </div>
                 </div>
