--- a/snapstyle.html
+++ b/snapstyle.html
@@ -50,7 +50,7 @@
         <section id="summary">
             <div class="container-fluid snapstyle-summary">
                 <div class="row">
-                    <div class="col-12 mx-auto wow fadeIn">
+                    <div class="col-12 text-center mx-auto wow fadeIn">
                         <img class="img-fluid" src="img/snapstyle-hero.png">
                     </div>
                 </div>
