--- a/snapstyle.html
+++ b/snapstyle.html
@@ -86,7 +86,7 @@
                 </div>
                 <div class="col-12 col-sm-4 text-center">
                     <h3>Tools</h3>
-                    Pen &amp; Paper, Sketch, InVision
+                    Pen &amp; Paper, Sketch, Marvel
                 </div>
             </div>
 
