--- a/investingnote.html
+++ b/investingnote.html
@@ -262,6 +262,14 @@
                     We also revamped key informational pages such as 'Portfolio' and 'Stock' to help users quickly get the information that is most useful or relevant to them. 
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-12 col-lg-8 col-md-10 mx-auto text-block">
+                    <h2>Prototype</h2>
+                    <p class="text-center">Thanks for reading! Click on the link below to try our interactive prototype.</p>
+                    <p class="text-center"><a class="prototype-link" href="https://marvelapp.com/121i28e6" target="_blank">View Prototype</a></p>
+                </div>
+            </div>
         </div>
     </section>
 
