--- a/oneservice.html
+++ b/oneservice.html
@@ -289,10 +289,16 @@
                                 <li>Introducing a feed of submitted cases in the user's vicinity to provide an integrated experience where they can be more aware of issues that are happening around them.</li>
                             </ol>
                         </p>
-                        <p class="text-center">Thanks for reading! Click on the link below to try our interactive prototype.</p>
-                        <p class="text-center"><a class="prototype-link" href="https://invis.io/N6ESD32V7" target="_blank">View Prototype</a></p>
                     </div>
                 </div>
+
+                <div class="row">
+                <div class="col-12 col-lg-8 col-md-10 mx-auto text-block">
+                    <h2>Prototype</h2>
+                    <p class="text-center">Thanks for reading! Click on the link below to try our interactive prototype.</p>
+                    <p class="text-center"><a class="prototype-link" href="https://invis.io/N6ESD32V7" target="_blank">View Prototype</a></p>
+                </div>
+            </div>
             </section>
 
             <section id="footer">
