--- a/sayabc.html
+++ b/sayabc.html
@@ -101,7 +101,7 @@
             </div>
 
             <div class="row image-block wow fadeIn">
-                <div class="col-12">
+                <div class="col-12 col-md-9 mx-auto">
                     <h2>Design</h2>
                     <img class="img-fluid" src="img/sayabc-teacher-website-wireframes.jpg">
                 </div>
@@ -127,9 +127,9 @@
             </div>
 
             <div class="row">
-                <<div class="col-12 col-md-10 col-lg-8 mx-auto text-block">
+                <div class="col-12 col-md-10 col-lg-8 mx-auto text-block">
                     <h3>Designing a seamless application process</h3>
-                    <p>The other goal of the website was to <strong>convert and ease applicants into the recruitment process</strong>. I worked closely with another UX designer on my team to create wireframes and hi-fi mockups of the recruitment flow, taking into account the operational requirements we established with the project managers and teacher management team.</p>
+                    <p>The other goal of the website was to <strong>convert and ease applicants into the recruitment process</strong>. I worked closely with Ariel, the UX design lead on my team to create wireframes and hi-fi mockups of the recruitment flow, taking into account the operational requirements we established with the project managers and teacher management team.</p>
                 </div>
             </div>
 
@@ -165,14 +165,77 @@
 
             <div class="row">
                 <div class="col-12 col-md-10 col-lg-8 mx-auto text-block">
-                    <p>It was important that we valued the time that applicants take to apply for a job with us. At each stage of the process, we made sure to give them feedback on how they are doing and where they are at. I created some simple illustrations to make our brand more personable, and worked with another UX designer to shape the messaging of the feedback and information they needed to know at each stage.</p>
+                    <p>It was important that we valued the time that applicants take to apply for a job with us. At each stage of the process, we made sure to give them feedback on how they are doing and where they are at. I created some simple illustrations to make our brand more personable, and worked with Ariel to shape the messaging of the feedback and information they needed to know at each stage.</p>
                 </div>
             </div>
 
             <div class="row">
-                <<div class="col-12 col-md-10 col-lg-8 mx-auto text-block">
+                <div class="col-12 col-md-10 col-lg-8 mx-auto text-block">
                     <h3>Supporting teachers to do their best work</h3>
-                    <p>More updates coming soon!</p>
+                    <p>Ariel and I noticed that we could do more to help teachers get the most out of the platform, as addressing their needs improves the classroom experience for students too. We started a side project to improve our current platform for teachers. We set up Skype interviews with a group of teachers and they shared their personal goals and pain points on working with us.</p>
+                </div>
+            </div>
+
+            <div class="row image-block wow fadeIn">
+                <div class="col-12 col-md-6">
+                    <img class="img-fluid" src="img/sayabc-teacher-persona-amanda.jpg">
+                </div>
+                <div class="col-12 col-md-6">
+                    <img class="img-fluid" src="img/sayabc-teacher-persona-david.jpg">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12 col-md-10 col-lg-8 mx-auto text-block">
+                    <p>Based on our research, I developed two personas to help scope our project.</p>
+                </div>
+            </div>
+
+            <div class="row image-block wow fadeIn">
+                <div class="col-12">
+                    <img class="img-fluid" src="img/sayabc-teacher-portal-wireframes.jpg">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12 col-md-10 col-lg-8 mx-auto text-block">
+                    <p>Then, we collaborated on <strong>Figma</strong> to brainstorm how we could develop an information architecture for the platform which scales appropriately to accommodate new features, yet integrates currently disparate features together to deliver a one-stop solution for teachers.</p>
+                </div>
+            </div>
+
+            <div class="row image-block wow fadeIn">
+                <div class="col-12">
+                    <img class="img-fluid" src="img/sayabc-new-teacher-portal-dashboard.jpg">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12 col-md-10 col-lg-8 mx-auto text-block">
+                    <p>The aim of the redesigned dashboard is to let teachers see the most important information they need to know at one glance, so they are aware of what has changed and decide if they want to dive deeper into a section.</p>
+                </div>
+            </div>
+
+            <div class="row image-block wow fadeIn">
+                <div class="col-12">
+                    <img class="img-fluid" src="img/sayabc-new-teacher-portal-classes.jpg">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12 col-md-10 col-lg-8 mx-auto text-block">
+                    <p>Classes are the main focus of the teachers. We decided to display their classes in a list view, categorising them by completed, scheduled and missed. This way, they can quickly glance through a greater number of classes and filter them efficiently through the search mechanism.</p>
+                </div>
+            </div>
+
+            <div class="row image-block wow fadeIn">
+                <div class="col-12 col-md-6 mx-auto">
+                    <img class="img-fluid" src="img/sayabc-new-teacher-portal-income.jpg">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12 col-md-10 col-lg-8 mx-auto text-block">
+                    <p>The income page provides transparency to the teachers on how much they are earning with the platform. It aims to give them an overview of the progress they are making, and assure them that their work is being taken into account.</p>
                 </div>
             </div>
 
