--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
                <div class="row">
                 <div class="col-12 col-sm-10 col-md-8 col-lg-6 mx-auto text-block">
                   <p>I'm Geng Hao, a designer and student at the National University of Singapore. I enjoy crafting thoughtful and elegant digital experiences and products. I've had the privilege of working with various types of companies across a range of industries, and I'm currently looking out for opportunities in user research and interaction design.</p>
-                  <p>When I'm not working, I'm hopefully buried in a book, running, or hiking somewhere in Southeast Asia. But I'm never not listening to music, with a soft spot for singer-songwriters.</p>
+                  <p>When I'm not working, I'm hopefully buried in a book, running like I haven't done enough cardio, or hiking somewhere in Southeast Asia. But I'm never not listening to music, with a soft spot for singer-songwriters.</p>
                   <p>Feel free to download a copy of my <a href="resume.pdf" target="_blank">resume</a>, connect with me on <a href="http://www.linkedin.com/in/geng-hao-teo-065ab0b9/" target="_blank">LinkedIn</a>, or reach out at <strong>teogenghao@gmail.com</strong>.</p>
                 </div>
               </div>
