--- a/sayabc.html
+++ b/sayabc.html
@@ -253,8 +253,8 @@
         <div class="container-fluid bottom-nav">
             <div class="row">
                 <div class="col-12 col-md-10 col-lg-8 mx-auto text-block">
-                    <a class="prev-link" href="snapstyle.html">&larr; Previous Project</a>
-                    <a class="next-link" href="investingnote.html">Next Project &rarr;</a>
+                    <a class="prev-link" href="index.html">&larr; Home</a>
+                    <a class="next-link" href="snapstyle.html">Next Project &rarr;</a>
                 </div>
             </div>
         </div>
