--- a/snapstyle.html
+++ b/snapstyle.html
@@ -290,7 +290,7 @@
         <div class="container-fluid bottom-nav">
             <div class="row">
                 <div class="col-12 col-md-10 col-lg-8 mx-auto text-block">
-                    <a class="prev-link" href="index.html">&larr; Home</a>
+                    <a class="prev-link" href="sayabc.html">&larr; Previous Project</a>
                     <a class="next-link" href="accenture.html">Next Project &rarr;</a>
                 </div>
             </div>
